--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -188,6 +188,7 @@
             top: -20px;
             color: #0297b5;
             background-color: #e5f4f8;
+            margin-bottom: 10px;
           }
         }
 
