--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -202,7 +202,7 @@ link: "#"
                     </h5>
                   </dt>
                 </dl>
-                <a href="/payment_com" class="bondi_blue_outline_btn">セゾンインボイスをもっと詳しく</a>
+                <a href="/saison_invoice" class="bondi_blue_outline_btn">セゾンインボイスをもっと詳しく</a>
               </div>
             </div>
           </div>
