--- a/app/pages/service/index.njk
+++ b/app/pages/service/index.njk
@@ -51,8 +51,11 @@ link:"#"
             目的別
           </div>
           <div class="right-content">
-            <a href="#" class="bondi_green_outline_btn">個人事業主様向け</a>
-            <a href="#" class="bondi_green_outline_btn">中小企業様向け</a>
+            <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
+            <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+            <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
+            <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
+            <a href="#" class="bondi_green_outline_btn">福利厚生を充実したい</a>
           </div>
         </div>
       </div>
@@ -62,7 +65,7 @@ link:"#"
   <section class="section-card-list">
     <div class="container-1200">
       <div class="section-wrapper">
-        <div class="card-section">
+        <div class="card-section cursor-pointer cursor-pointer">
           <img src="/assets/img/credit_cards/saison-03.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -79,7 +82,8 @@ link:"#"
             </div>
           </div>
         </div>
-        <div class="card-section">
+
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-01.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -96,7 +100,8 @@ link:"#"
             </div>
           </div>
         </div>
-        <div class="card-section">
+
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-02.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -113,7 +118,7 @@ link:"#"
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/american-express-01.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -130,7 +135,7 @@ link:"#"
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/american-express-02.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -147,11 +152,11 @@ link:"#"
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-04.png" alt="cast flow">
           <div class="content">
             <div class="title">
-              <span class="blue">請求書カード払いサービス</span>
+              <span class="blue">後払い決済・請求代行サービス</span>
               セゾンインボイス
             </div>
             <div class="description">
@@ -159,12 +164,12 @@ link:"#"
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">ビジネスカードを作りたい</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
+              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-05.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -177,12 +182,12 @@ link:"#"
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">経費を削減したい</a>
+              <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
               <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-06.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -198,7 +203,7 @@ link:"#"
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-07.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -209,12 +214,12 @@ link:"#"
               まとまった資金を低金利で!
             </div>
             <div class="list-button">
-              <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+              <a href="#" class="bondi_blue_outline_btn">個人事業主様向け</a>
+              <a href="#" class="bondi_green_outline_btn">資金繰りを改善したい</a>
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-08.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -226,11 +231,11 @@ link:"#"
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
-        <div class="card-section">
+        <div class="card-section cursor-pointer">
           <img src="/assets/img/credit_cards/saison-09.png" alt="cast flow">
           <div class="content">
             <div class="title">
@@ -242,7 +247,7 @@ link:"#"
             </div>
             <div class="list-button">
               <a href="#" class="bondi_blue_outline_btn">中小企業様向け</a>
-              <a href="#" class="bondi_green_outline_btn">福利厚生を充実させたい</a>
+              <a href="#" class="bondi_green_outline_btn">業務効率化を図りたい</a>
             </div>
           </div>
         </div>
