--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -40,11 +40,11 @@
         <li class="card-type6">
           <a href="#employee" class="card">
             <div class="ttl-quaternary-container">
-              <h4 class="ttl-quaternary">人材が定着しない <br/>
+              <h4 class="ttl-quaternary">人材が定着しない <br />
                 採用難易度があがっている</h4>
             </div>
             <div class="card-image">
-              <img src="/assets/img/common/img-welfare-001.png"/>
+              <img src="/assets/img/common/img-welfare-001.png" />
             </div>
             <ul class="card-description">
               <li class="card-description__detail">
@@ -69,7 +69,7 @@
         <li class="card-type6">
           <a href="#effort" class="card">
             <div class="ttl-quaternary-container">
-              <h4 class="ttl-quaternary">福利厚生を導入したいが <br/>
+              <h4 class="ttl-quaternary">福利厚生を導入したいが <br />
                 費用や手間がかかりそう</h4>
             </div>
             <div class="card-image">
@@ -94,8 +94,9 @@
           <a href="#benefits" class="card">
             <div class="ttl-quaternary-container">
               <h4 class="ttl-quaternary">福利厚生を導入しているが
-                <br/>
-                あまり使われていない</h4>
+                <br />
+                あまり使われていない
+              </h4>
             </div>
             <div class="card-image">
               <img src="/assets/img/common/img-welfare-003.png" alt="">
@@ -162,10 +163,10 @@
                 <div class="card">
                   <div class="cat">従業員のメリット</div>
                   <ul class="circle-list">
-                    <li>生活や健康が安定・向上する</li>
-                    <li>スキルアップの機会が得られる</li>
-                    <li>パフォーマンスが向上する</li>
-                    <li>ライフワークバランスが改善する</li>
+                    <li>従業員満足度が上がり、離職率が下がる</li>
+                    <li>採用時のアピールとなり、人材確保に役立つ</li>
+                    <li>社会的信頼を高めることができる</li>
+                    <li>労使関係の安定につながる</li>
                   </ul>
                 </div>
               </div>
@@ -194,7 +195,7 @@
               </div>
 
               <div class="img-circle">
-                  <img src="/assets/img/common/img-welfare-preview.png" alt="">
+                <img src="/assets/img/common/img-welfare-preview.png" alt="">
               </div>
 
               <div class="arrow"></div>
@@ -202,7 +203,7 @@
                 <h3 class="welfare-more-tooltip__content">完全アウトソーシング型の福利厚生サービスなので、新たな業務が増える心配はありません。運用は全てお任せください。</h3>
               </div>
             </div>
-        </div>
+          </div>
         </div>
       </div>
 
@@ -255,9 +256,10 @@
                     全国25,000以上の施設で最大</br>66%OFFで利用可能
                   </div>
                   <a href="#">
-                    <img src="/assets/img/welfare/welfare_card1.png" alt="preferential service 1"/>
+                    <img src="/assets/img/welfare/welfare_card1.png" alt="preferential service 1" />
                     <div class="preferential-service-description">
-                      <p class="description"><strong>レジャーや健康増進、食事や旅行のシーンで利用できる優待</strong>など、従業員の方々が利用しやすい多彩な優待を取りそろえています。</p>
+                      <p class="description">
+                        <strong>レジャーや健康増進、食事や旅行のシーンで利用できる優待</strong>など、従業員の方々が利用しやすい多彩な優待を取りそろえています。</p>
                     </div>
                   </a>
                 </li>
@@ -266,7 +268,7 @@
                     外国籍の従業員も利用しやすい</br>環境が整っています。
                   </div>
                   <a href="#">
-                    <img src="/assets/img/welfare/welfare_card2.png" alt="preferential service 2"/>
+                    <img src="/assets/img/welfare/welfare_card2.png" alt="preferential service 2" />
                     <div class="preferential-service-description">
                       <p class="description">日本語、英語のほか<strong>中国語（簡体、繁体）、ベトナム語</strong>に対応しています。</p>
                     </div>
@@ -282,7 +284,7 @@
 
   <section class="section-tertiary fadein">
     <div class="container-1200">
-      <h2 class="ttl-secondary">ご利用はわずか月額385円（税込）〜  / 1アカウント</h2>
+      <h2 class="ttl-secondary">ご利用はわずか月額385円（税込）〜 / 1アカウント</h2>
 
       <h3 class="ttl-tertiary">ご法人様向け/個人事業主様向けプランをご用意しています。</h3>
 
@@ -290,7 +292,7 @@
         <img src="/assets/img/common/img-welfare-icon-001.png" alt="">
       </div>
 
-      <a href="#" class="faq_more bondi_blue_outline_btn">
+      <a href="/saison_welfare" class="faq_more bondi_blue_outline_btn">
         <span class="bondi_blue_outline_btn__tittle">
           セゾンフクリコをもっと詳しく
         </span>
@@ -319,16 +321,16 @@
                 <div class="card__box--ttl">「詳しい資料が欲しい」</br>という方はこちら</div>
                 <div><a href="#" class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
               </summary>
-          </div>
-          <div href="#" class="card">
-            <summary class="card__box">
-              <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
-              <div><a class="blue_gradient_btn" href="/contact">サポート担当に無料で相談する</a></div>
-            </summary>
+            </div>
+            <div href="#" class="card">
+              <summary class="card__box">
+                <div class="card__box--ttl">「詳しい話を聞きたい」「相談したい」</br>という方はこちら</div>
+                <div><a class="blue_gradient_btn" href="/contact">サポート担当に無料で相談する</a></div>
+              </summary>
+            </div>
           </div>
         </div>
       </div>
-    </div>
   </section>
 </main>
 {% endblock %}
