--- a/app/assets/scss/4-pages/_saison_welfare.scss
+++ b/app/assets/scss/4-pages/_saison_welfare.scss
@@ -168,6 +168,7 @@
           margin-bottom: 105px;
           text-align: left;
           line-height: 34px;
+          text-shadow: 0px 0px 20px #05172c8d;
 
           @media #{$sp} {
             font-size: 20px;
