--- a/app/assets/scss/4-pages/_cospro.scss
+++ b/app/assets/scss/4-pages/_cospro.scss
@@ -284,6 +284,9 @@
         p {
           font-size: 16px;
         }
+        &:hover {
+          box-shadow: 0px 3px 20px #00000029;
+        }
       }
     }
     @media #{$sp} {
@@ -486,6 +489,10 @@
       box-shadow: 0px 3px 20px #00000029;
       border-radius: 3px;
 
+      @media #{$sp} {
+        padding: 15px;
+      }
+
       .step-title {
         display: flex;
         justify-content: center;
@@ -514,6 +521,10 @@
           @media #{$sp} {
             font-size: 16px;
           }
+        }
+        @media #{$sp} {
+          flex-direction: column;
+          gap: 15px;
         }
       }
 
