--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -110,21 +110,21 @@
       </h3>
 
       <div class="card-list">
-        <a class="card">
+        <div class="card">
           <h2>初期費用・月額費用</h2>
           <div class="grid__card--img"><img src="/assets/img/cospro/card1.png" alt="work image"></div>
           <p>予約システムもデータ管理も無料!クレディセゾン発行の法人向けカード会員様であれば<span class="font-bold">国内航空券発券手数料も無料です。（通常1席あたり1,500円）</span></p>
-        </a>
-        <a class="card">
+        </div>
+        <div class="card">
           <h2>年中無休のコールセンター</h2>
           <div class="grid__card--img"><img src="/assets/img/cospro/card2.png" alt="work image"></div>
           <p><span class="font-bold">コールセンターは365日稼働！</span> 出張の移動中、帰りの飛行機やホテルの中で簡単に予約・変更することができます。</p>
-        </a>
-        <a class="card">
+        </div>
+        <div class="card">
           <h2>出張コストを適正可. </h2>
           <div class="grid__card--img"><img src="/assets/img/cospro/card3.png" alt="work image"></div>
           <p>予約されたチケットの料金の適正や、取り間違いがないかなど、独自の <span class="font-bold">「適正化チェック」サービスで出張コスト削減</span>に貢献いたします。</p>
-        </a>
+        </div>
       </div>
     </div>
   </section>
@@ -181,7 +181,7 @@
       <div class="act-more-content">
         <div class="act-more-content-btn">
           <a href="#" class="blue_gradient_btn">
-            お申し込みはこちら
+            サービス資料ダウンロード
           </a>
         </div>
       </div>
@@ -334,7 +334,7 @@
             </div>
             <p class="flow-content">まずはお気軽にご相談ください</p>
             <div class="bondi_blue_outline_btn">
-              <a class="bondi_blue_outline_btn__tittle">ご相談・お問い合わせ</a>
+              <a href="/contact/" class="bondi_blue_outline_btn__tittle">ご相談・お問い合わせ</a>
             </div>
           </div>
         </li>
