--- a/app/assets/scss/4-pages/_business_efficiency.scss
+++ b/app/assets/scss/4-pages/_business_efficiency.scss
@@ -166,7 +166,7 @@
               &-item {
                 display: flex;
                 gap: 10px;
-                align-items: center;
+                align-items: baseline;
 
                 svg {
                   width: 20px;
