fix contact saison welfare

--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -605,7 +605,7 @@ link: "#material"
                     <img src="/assets/img/payment_com/payment_contact2.png"/>
                   </div>
                   <div class="card__box--txt">
-                    導入にあたってのご相談や、各種優待サービスなどをご紹介させていただきます。
+                    セゾンフクリコのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
                 <div><a class="blue_gradient_btn" href="#">サービス資料ダウンロード</a></div>
@@ -619,7 +619,7 @@ link: "#material"
                     <img src="/assets/img/common/contact_inner2.png"/>
                   </div>
                   <div class="card__box--txt">
-                    導入にあたってのご相談や、貴社の運用フローに合わせた導入方法をご提案させていただきます。
+                    導入にあたってのご相談や、各種優待サービスなどをご紹介させていただきます。
                   </div>
                 </div>
               <div><a class="blue_gradient_btn" href="/contact/">導入のご相談・お問い合わせ（無料）</a></div>
