フォント修正

--- a/app/pages/reduction_expenses/index.njk
+++ b/app/pages/reduction_expenses/index.njk
@@ -165,7 +165,7 @@
         <h2 class="ttl-tertiary title">
           <span class="gray-bottom"><span class="yellow">「どのビジネスカードか迷っている・・・」</span>という方へ</span>
         </h2>
-        <h3 class="ttl-tertiary description">{{ search_by_purpose.tertiary.description | safe }}</h3>
+        <h3 class="ttl-tertiary description" style="line-height:1.75;">{{ search_by_purpose.tertiary.description | safe }}</h3>
         <a href="/contact" class="blue_gradient_btn">{{ common.button.download }}</a>
       </div>
     </section>
