--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -593,7 +593,7 @@ link: "#material"
   <section class="section-contact fadein">
     <div class="card-type22">
       <div class="ttl-notice">CONTACT</div>
-      <h3 class="ttl-tertiary">セゾンインボイスをご検討中の方へ</h3>
+      <h3 class="ttl-tertiary">セゾンフクリコをご検討中の方へ</h3>
       <div class="useful-wp container">
         <div class="containers">
           <div class="flex jcC gap60">
