--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -161,7 +161,7 @@
                 </div>
 
                 <div class="card">
-                  <div class="cat">従業員のメリット</div>
+                  <div class="cat">会社のメリット</div>
                   <ul class="circle-list">
                     <li>従業員満足度が上がり、離職率が下がる</li>
                     <li>採用時のアピールとなり、人材確保に役立つ</li>
