リンク設定

--- a/app/pages/business_efficiency/index.njk
+++ b/app/pages/business_efficiency/index.njk
@@ -342,7 +342,7 @@ link: "#"
                     </h5>
                   </dt>
                 </dl>
-                <a href="#" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a>
+                <a href="/payment_com/" class="bondi_blue_outline_btn">支払い.comをもっと詳しく</a>
               </div>
             </div>
           </div>
@@ -425,7 +425,7 @@ link: "#"
                     <span class="text-muted">※365日稼働のコールセンターは国内出張の手配専用の窓口です。海外出張の手配窓口に関しては平日のみの稼働となります。</span>
                   </dt>
                 </dl>
-                <a href="#" class="bondi_blue_outline_btn">CosProをもっと詳しく</a>
+                <a href="/cospro/" class="bondi_blue_outline_btn">CosProをもっと詳しく</a>
               </div>
             </div>
           </div>
