fix text welfare

--- a/app/assets/scss/4-pages/_welfare.scss
+++ b/app/assets/scss/4-pages/_welfare.scss
@@ -158,7 +158,7 @@
     }
 
     .ttl-tertiary {
-      font-weight: 500px;
+      font-weight: 400;
 
       .yellow-bottom {
         font-weight: 600;
@@ -492,7 +492,7 @@
               border-top-right-radius: 3px;
             }
 
-            a {
+            .card-content {
               display: flex;
               gap: 20px;
               padding: 20px;
