--- a/app/pages/improve_cash_flow/index.njk
+++ b/app/pages/improve_cash_flow/index.njk
@@ -25,7 +25,7 @@
     <div class="section-welcome__container">
       <div class="section-welcome__inner">
         <h3 class="ttl-tertiary">
-          法人経営者様・個人事業主様へ
+          法人経営者・個人事業主の方へ
         </h3>
       </div>
       <div class="section-welcome__title">
@@ -154,7 +154,7 @@
 
             <div class="card-type13">
               <dd>
-                セゾンビジネスサポートローンは、下記対象のビジネスカードでご利用いただける中小企業様・個人事業主様の経営を支援する融資サービスです。お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠と借り入れ額に応じた優遇金利</strong>をご用意しております。カード1枚で用途を問わず、ビジネスのあらゆるシーンで幅広くご利用いただけます。
+                セゾンビジネスサポートローンは、下記対象のビジネスカードでご利用いただける中小企業・個人事業主様の経営を支援する融資サービスです。お持ちのビジネスカードに、<strong>最大950万円のゆとりあるご融資可能枠と借り入れ額に応じた優遇金利</strong>をご用意しております。カード1枚で用途を問わず、ビジネスのあらゆるシーンで幅広くご利用いただけます。
               </dd>
 
               <ul class="flex gap30 card-list">
@@ -293,7 +293,7 @@
       </h3>
       <div class="useful-wp container">
         <p class="description">
-          経営者様や個人事業主様にとって資金繰り改善や資金調達は、急ぎ解決したい課題だと思います。</br>
+          経営者や個人事業主にとって資金繰り改善や資金調達は、急ぎ解決したい課題だと思います。</br>
           クレディセゾンはそのような方向けに「素早く・手軽に解決できる」サービスをご提供しています。お気軽にご相談ください。
         </p>
         <div class="containers">
