--- a/app/pages/welfare/index.njk
+++ b/app/pages/welfare/index.njk
@@ -133,8 +133,8 @@
       <h3 class="ttl-tertiary">
         セゾンフクリコは、<div class="yellow-bottom">
           わずか月額385円(税込)
-        </div> でご利用できる中小企業様向けの法定外複利厚生サービスです。<br>
-        従業員のエンゲージメント・企業価値の向上に貢献します。
+        </div> でご利用できる<strong>中小企業向けの法定外複利厚生サービス</strong>です。<br>
+        <strong>従業員のエンゲージメント・企業価値の向上に貢献します。</strong>
       </h3>
 
       <div class="panel-primary">
@@ -183,7 +183,7 @@
             </h3>
 
             <dd>
-              福利厚生の種類を増やして充実させるほど、運営の手間はかかります。しかし、「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者様に業務をご負担いただく必要はありません。
+              福利厚生の種類を増やして充実させるほど、運営の手間はかかります。「セゾンフクリコ」なら、施設などとの直接契約業務や、設備投資・運営はすべて完全アウトソーシングなので導入事業者の方に業務をご負担いただく必要はありません。
             </dd>
             <div class="flex gap30 card-container">
 
@@ -214,7 +214,7 @@
               <span>③全国を網羅した豊富な特別優待メニュー</span>
             </h3>
 
-            <dd>福利厚生はただ導入をすればいいというものではなく、従業員に利用してもらうことに意味があります。セゾンフクリコは、多様化する従業員のニーズに応じた、幅広いサービスを各種取りそろえています。</dd>
+            <dd>福利厚生はただ導入をすればいいというものではなく、従業員に利用してもらうことに意味があります。セゾンフクリコは、多様化する従業員のニーズに応じた、各種サービスを取りそろえています。</dd>
             <ul class="card-solution-list">
               <li>
                 <img src="/assets/img/saison_welfare/welfare_feature_1.png" alt="welfare support 1">
@@ -255,24 +255,24 @@
                   <div class="card-title">
                     全国25,000以上の施設で最大</br>66%OFFで利用可能
                   </div>
-                  <a href="#">
+                  <div class="card-content">
                     <img src="/assets/img/welfare/welfare_card1.png" alt="preferential service 1" />
                     <div class="preferential-service-description">
                       <p class="description">
                         <strong>レジャーや健康増進、食事や旅行のシーンで利用できる優待</strong>など、従業員の方々が利用しやすい多彩な優待を取りそろえています。</p>
                     </div>
-                  </a>
+                  </div>
                 </li>
                 <li>
                   <div class="card-title">
                     外国籍の従業員も利用しやすい</br>環境が整っています。
                   </div>
-                  <a href="#">
+                  <div class="card-content">
                     <img src="/assets/img/welfare/welfare_card2.png" alt="preferential service 2" />
                     <div class="preferential-service-description">
                       <p class="description">日本語、英語のほか<strong>中国語（簡体、繁体）、ベトナム語</strong>に対応しています。</p>
                     </div>
-                  </a>
+                  </div>
                 </li>
               </ul>
             </div>
